--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "microfrontend template that contains all functionalities (I can think off) in modern web development.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "commit": "cz"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,13 @@
   },
   "homepage": "https://github.com/joeldsouzax/micro-frontends-template#readme",
   "devDependencies": {
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
     "lerna": "^4.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
