build(project): made the project private to make it a monorepo
mono repo projects should be private since would never publish or deploy
an entire project

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "micro-frontends-template",
   "version": "1.0.0",
+  "private": true,
   "description": "microfrontend template that contains all functionalities (I can think off) in modern web development.",
   "main": "index.js",
   "scripts": {
