build(project): specified workspaces in package.json
workspaces are necessary to be specified so yarn can work on multiple
projects at once.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "micro-frontends-template",
   "version": "1.0.0",
   "private": true,
+  "workspaces":[
+    "packages/*"
+  ],
   "description": "microfrontend template that contains all functionalities (I can think off) in modern web development.",
   "main": "index.js",
   "scripts": {
