--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "micro-frontends-template",
   "version": "1.0.0",
   "private": true,
-  "workspaces":[
+  "workspaces": [
     "packages/*"
   ],
   "description": "microfrontend template that contains all functionalities (I can think off) in modern web development.",
@@ -26,16 +26,18 @@
     "redux",
     "babel"
   ],
-  "author": "joeldsouzax@gmail.com",
+  "author": "Joel D'Souza <joeldsouzax@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/joeldsouzax/micro-frontends-template/issues"
   },
   "homepage": "https://github.com/joeldsouzax/micro-frontends-template#readme",
   "devDependencies": {
+    "@types/node": "^17.0.13",
     "commitizen": "^4.2.4",
     "cz-lerna-changelog": "^2.0.3",
-    "lerna": "^4.0.0"
+    "lerna": "^4.0.0",
+    "typescript": "^4.5.5"
   },
   "config": {
     "commitizen": {
